--- a/docs/objects/tutorial_Class.qmd
+++ b/docs/objects/tutorial_Class.qmd
@@ -1,6 +1,6 @@
-# Hoe programmeer je met objecten?
+### Hoe programmeer je met objecten?
 
-## Aan de hand van Hero tegen Monsters
+#### Aan de hand van Hero tegen Monsters
 
 Hoe groter software wordt, hoe tijdrovender het  testen en onderhouden.
 Daarom wordt in de softwarewereld gezocht naar manieren om programma's onderhoudbaar te maken.
@@ -69,7 +69,7 @@ uiteindelijk wellicht bezwijken.
 ![class Monster](figures/ClassMonster.png "Class Monster")
 
 
-### Hoe maak ik een class aan in Visual Studio?
+##### Hoe maak ik een class aan in Visual Studio?
 
 Klik met rechtermuisknop op het project en kies `Add Item`,
 kies daarna een `class`. Onderin het scherm kun je de gewenste
@@ -80,7 +80,7 @@ In veel programmeertalen is het gebruikelijk om elke `class` in een eigen file
 te programmeren. 
 
 
-## Gezondheid
+#### Gezondheid
 
 In dit spel kunnen we dat realiseren
 door het monster *hitPoints* te geven:
@@ -152,7 +152,7 @@ public Game()
  }
 ```
 
-## Attack
+#### Attack
 Onze *hero* staat te popelen om een monster te gaan aanvallen.
 Hiervoor gaan we *gedrag* in de `class` *Hero* programmeren:
 
@@ -214,7 +214,7 @@ Uitleg:
   - De waarde van *this.hitPoints* (links van de =) wordt de uitkomst van de berekening.
 
 
-### Constructie van een object
+##### Constructie van een object
 Net zoals we bij een methode aanvullende informatie mee kunnen
 geven in de vorm van `parameters` kunnen we dat bij het aanmaken
 van een nieuw `object` ook. Hiertoe gebruiken we een `constructor`:
@@ -232,7 +232,7 @@ Een `constructor` herken je alsvolgt:
 - Er wordt geen `return-type` (of `void`) vermeld.
 - De naam (*Monster* in dit geval) is gelijk aan de naam van de `class`.
 
-### Constructor in Visual Studio
+##### Constructor in Visual Studio
 
 Je kunt natuurlijk de code hierboven zelf intypen (tussen de accolades van de `class`)
 maar als je op die plek intypt *ctor* en dan 2x op *tab* drukt
@@ -245,16 +245,16 @@ meerdere parameters meegegeven worden.
 
 
 
-## Wat hebben we nu?
+#### Wat hebben we nu?
 
 We hebben nu een basis neergezet voor een spel waarin een *hero* *monsters* kan aanvallen.
 
-### Om het werkend te krijgen
+##### Om het werkend te krijgen
 
 Later wordt nog uitgelegd waarom, maar onthoudt vast dat we elk *Field* `private` maken.
 `Methods` en `classes` mogen `public` zijn.
 
-### Code tot nu toe
+##### Code tot nu toe
 
 Voor de volledigheid volgt nu de code van de classes zoals die tot hier beschreven is.
 Allereerst de `class` *Game*
