--- a/docs/basic/Programming_Basics/intro.qmd
+++ b/docs/basic/Programming_Basics/intro.qmd
@@ -1,4 +1,34 @@
 # Introduction
 
-This book contains Intro_to_ICT for Programming_Basics content for Fontys ICT.
+## Wat bedoelen we met 'De Basis van Programmeren'? 
 
+Een aantal programmeerconcepten:
+
++ Variable
++ Conditional statement
++ Loop
++ Method
++ Parameters bij Methods
++ Returnvalues bij Methods
++ List
++ Array
++ Enum
++ Type int, string, double, bool
+
+Ook vaardigheden als:
+
++ Leesbaarheid / Onderhoudbaarheid
++ Algoritmiek
++ Feedback vragen en dat verwerken
++ Professioneel handelen
+
+## Intro personas
+
+In den beginne... had nog niemand programmeerervaring... Op het moment dat je aan dit semester begint heb je misschien al ergens ervaring opgedaan, of wellicht niet. Kortom: we zijn allen gelijk in dat we allemaal uniek zijn! 
+
+Als je al ervaring hebt is het jammer helemaal aan het begin te beginnen. Vandaar dat we verschillende persona's beschreven hebben. Bepaal welke het best bij je past en kijk eens wat er over jouw persona gezegd wordt. 
+
+
+| [Bas (of Barbara)<br /> the Absolute Beginner](Bas)  | [Intermediate Inge (of Ivo)](Inge) | [OOP-experienced<br /> Olaf (of Olivia)](Olaf) |
+| ------------- | ------------- | ------------- |
+| ![Bas](../../personas/figures/bas-small.png) | ![Inge](../../personas/figures/inge-small.png)|![Olaf](../../personas/figures/olaf-small.png)|
