--- a/docs/process/infoVisualStudioInstallatie.qmd
+++ b/docs/process/infoVisualStudioInstallatie.qmd
@@ -134,3 +134,54 @@ dat dan zichtbaar wordt als je op de knop drukt.
 ```cs
 MessageBox.Show("Dank je wel voor het klikken!");
 ```
+
+## Inleveren van Visual Studio solutions
+
+Als je gemaakte `Visual Studio solutions` wil inleveren in Canvas,
+hou dan rekening met het volgende:
+
+- Laat `Visual Studio`  tijdens het programmeren alle files opslaan op de door `Visual Studio` voorgestelde plek. (ga dus *niet* losse `files` met behulp van `save as` op andere plekken opslaan).
+- Het gevolg hiervan is dat alle files van een `solution` in 1 `directory` bij elkaar staan.
+- De `default` plek waar `Visual Studio` solutions opslaat is `C:\Users\<je user naam>\source`.
+- Als je 1 `solution` wilt inleveren kun je de directory van die solution `zippen` door in het *rechtermuisknop* van de `directory`  `send to|Compressed (zipped) Folder` te kiezen.
+- Als je meerdere `solutions` in 1 zip wilt inleveren kun je er meerdere selecteren (met `ctrl` of `shift` ingedrukt en dan de `directories` aan te klikken), ook weer met hetzelfde *rechtermuismenu* te zippen.
+- Gebruik in Canvas de `Submit`-button om de zip in te leveren.
+
+![](figures/defaultDirectoryVS.png "default project directory van Visual Studio")
+
+
+
+![](figures/contextmenuzip.png "default project directory van Visual Studio")
+
+## Short cut keys in Visual Studio
+
+Als in een sneltoets combinatie een komma staat, dan moet eerst het deel voor de komma worden ingedrukt, dan laat je de toetsen los en druk je daarna de letter in die na de komma staat.
+
+| Sneltoets | Menu | Toelichting |
+| --- | --- | --- |
+| CTRL-W, X | View → Toolbox | Maakt het Toolbox scherm met alle |
+|  |  | visuele objecten zichtbaar. |
+| CTRL-W, P | View → Properties | Window	Scherm met de |
+|  |  | eigenschappen van visuele objecten |
+|  |  | tonen. Hier vind je ook de events |
+|  |  | van de visuele objecten. |
+| CTRL-W, E | View → Error List | Toont het scherm met de eventuele |
+|  |  | fouten die in je code gevonden zijn |
+|  |  | (ververs het scherm door je project |
+|  |  | opnieuw te build-en met de F6 knop, |
+|  |  | zie hieronder). |
+|  |  | Dubbelklikken op een error navigeert |
+|  |  | naar de plaats in je code waar de |
+|  |  | fout is gevonden. |
+|  |  | Tip: bekijk eerst de eerste fout, |
+|  |  | andere fouten kunnen hier een gevolg |
+|  |  | van zijn. |
+| F6 | Build → Build Solution | Controleert je code op fouten en bouwt |
+|  |  | vervolgens een uitvoerbaar bestand. |
+| F5 | Debug → Start Debugging | Build je project (zie F6 hierboven) als |
+|  |  | dat nog niet gebeurd is, en voert het |
+|  |  | uitvoerbaar bestand vervolgens uit. |
+|  |  | Dit doet hetzelfde als een klik op de knop |
+|  |  | met het groene pijltje (playknop). |
+| Shift-F5 |  | Stop de uitvoer van je programma. Handig |
+|  |  | als je programma vast loopt. |
